cmake_minimum_required(VERSION 3.10)
project(DoublyLinkedList)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)

add_library(doubly_linked_list INTERFACE)
target_include_directories(doubly_linked_list INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)

add_executable(doubly_linked_list_tests tests/DoublyLinkedListTests.cpp)
target_link_libraries(doubly_linked_list_tests PRIVATE doubly_linked_list)
